# blog-api

./: .env.dev  .env.prod  .render.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  auto-update.txt  pyproject.toml  requirements.txt  test.db
.github/workflows/: auto-commit.yml
app/: .env.dev  .gitignore  articles.json  crud.py  main.py  models.py  schemas.py  utils.py
app/.github/workflows/: auto-commit.yml
app/api/: deps.py  main.py
app/api/routers/: articles.py
app/config/: cors.py  settings.py
app/db/: config.py
app/routers/: articles.py
app/tests/: conftest.py
app/tests/app/api/: utils.py
app/tests/app/api/routes/: test_articles.py
